Retoques finales introduccion y conclusión

--- a/Plantilla_TFG_latex/secciones/01_Introduccion.tex
+++ b/Plantilla_TFG_latex/secciones/01_Introduccion.tex
@@ -41,15 +41,15 @@ Este proyecto no habría sido posible sin la colaboración estrecha con Codelear
 En esta sección se describe la estructura de esta memoria. Concretamente, se organiza en nueve capítulos principales, acompañados de anexos, que detallan el desarrollo. 
 
 \begin{enumerate}
-    \item  \textbf{Introducción} \ref{chap:introduction}: Establece el contexto de la programación en la era actual, describe el problema que aborda el TFG, presenta los objetivos, el enfoque metodológico, la colaboración con Codelearn S.L., y esta misma sección que esboza la estructura del documento.
-    \item  \textbf{Estado del Arte y Trabajos Relacionados} \ref{chap:stateoftheart}: Profundiza en los Sistemas de Tutorización Inteligente (ITS), su evolución, aplicaciones actuales en diversos campos, limitaciones, desafíos y su papel en la educación moderna, incluyendo una comparativa de plataformas de programación.
-    \item \textbf{Planificación} \ref{chap:planification}: Desglosa las fases del proyecto junto con el presupuesto detallado que cubre licencias, recursos materiales, costes de personal y otros gastos.
-    \item \textbf{Análisis} \ref{chap:analisis}: Incluye el análisis de usuarios objetivo, requisitos educativos, modelos de casos de uso, escenarios de uso, y la seguridad y acceso al sistema.
-    \item \textbf{Requisitos} \ref{chap:requisitos}: Define los requisitos funcionales, no funcionales y de información del sistema, detallando aspectos generales, del sistema, de estudiantes, profesores y administradores.
-    \item \textbf{Diseño e Implementación} \ref{chap:analisisExperimentación}: Cubre el diseño pedagógico, la arquitectura del sistema, diseño de base de datos, interfaz de usuario y la implementación de algoritmos y módulos de aprendizaje adaptativo.
-    \item  \textbf{Despliegue} \ref{chap:despliegue}: Describe la creación y configuración de imágenes para el despliegue del sistema y el uso de Podman.
-    \item \textbf{Pruebas y Resultados} \ref{chap:resultadosExperimentales}: Presenta las pruebas realizadas y los resultados obtenidos a partir de estas.
-    \item \textbf{Conclusiones y Trabajo Futuro} \ref{chap:conclusiones}: Ofrece conclusiones derivadas del trabajo realizado, posibles direcciones futuras para la investigación y una reflexión personal sobre el proyecto.
+    \item  \textbf{Introducción} (véase capítulo \ref{chap:introduction}): Establece el contexto de la programación en la era actual, describe el problema que aborda el TFG, presenta los objetivos, el enfoque metodológico, la colaboración con Codelearn S.L., y esta misma sección que esboza la estructura del documento.
+    \item  \textbf{Estado del Arte y Trabajos Relacionados} (véase capítulo \ref{chap:stateoftheart}): Profundiza en los Sistemas de Tutorización Inteligente (ITS), su evolución, aplicaciones actuales en diversos campos, limitaciones, desafíos y su papel en la educación moderna, incluyendo una comparativa de plataformas de programación.
+    \item \textbf{Planificación} (véase capítulo \ref{chap:planification}): Desglosa las fases del proyecto junto con el presupuesto detallado que cubre licencias, recursos materiales, costes de personal y otros gastos.
+    \item \textbf{Análisis} (véase capítulo \ref{chap:analisis}): Incluye el análisis de usuarios objetivo, requisitos educativos, modelos de casos de uso, escenarios de uso, y la seguridad y acceso al sistema.
+    \item \textbf{Requisitos} (véase capítulo \ref{chap:requisitos}): Define los requisitos funcionales, no funcionales y de información del sistema, detallando aspectos generales, del sistema, de estudiantes, profesores y administradores.
+    \item \textbf{Diseño e Implementación} (véase capítulo \ref{chap:analisisExperimentación}): Cubre el diseño pedagógico, la arquitectura del sistema, diseño de base de datos, interfaz de usuario y la implementación de algoritmos y módulos de aprendizaje adaptativo.
+    \item  \textbf{Despliegue} (véase capítulo \ref{chap:despliegue}): Describe la creación y configuración de imágenes para el despliegue del sistema y el uso de Podman.
+    \item \textbf{Pruebas y Resultados} (véase capítulo \ref{chap:resultadosExperimentales}): Presenta las pruebas realizadas y los resultados obtenidos a partir de estas.
+    \item \textbf{Conclusiones y Trabajo Futuro} (véase capítulo \ref{chap:conclusiones}): Ofrece conclusiones derivadas del trabajo realizado, posibles direcciones futuras para la investigación y una reflexión personal sobre el proyecto.
 \end{enumerate}    
 
-Además, los anexos proporcionan información adicional sobre recursos informáticos \ref{chap:recursos}, guiones de pruebas con los niños \ref{chap:guion}, ficheros utilizados para el despliegue \ref{podmananddockerfile}, un manual de usuario \ref{imagenessistema}, un glosario y la bibliografía.
+Además, los anexos proporcionan información adicional sobre recursos informáticos (véase anexo \ref{chap:recursos}), guiones de pruebas con los niños (véase anexo \ref{chap:guion}), ficheros utilizados para el despliegue (véase anexo \ref{podmananddockerfile}), un manual de usuario (véase anexo \ref{imagenessistema}), un glosario y la bibliografía.
