--- a/Plantilla_TFG_latex/secciones/09_Conclusiones.tex
+++ b/Plantilla_TFG_latex/secciones/09_Conclusiones.tex
@@ -4,22 +4,22 @@ Este último capítulo sirve como el cierre al Trabajo de Fin de Grado presentad
 
 \section{Conclusiones}
 
-Este TFG se ha centrado en un reto importante: la enseñanza de la programación a niños en el contexto de una sociedad digitalizada en rápida evolución. A través de un enfoque multidisciplinario \ref{chap:state_of_the_art}, combinando pedagogía, tecnología educativa y diseño de sistemas, se ha desarrollado una plataforma innovadora y adaptable, destacándose en el campo de la enseñanza.
+Este TFG se ha centrado en un reto: la enseñanza de la programación a niños en un contexto de una sociedad digitalizada en rápida evolución. A través de un enfoque multidisciplinario combinando pedagogía, tecnología educativa y diseño de sistemas (veáse capítulo \ref{chap:stateoftheart},), se ha desarrollado una plataforma adaptable dentro del campo de la enseñanza cumpliendo así los objetivos establecidos.
 
-Un logro clave ha sido el desarrollo del Sistema de Tutorización Inteligente, que supera las barreras de los métodos tradicionales al ofrecer un aprendizaje personalizado y adaptativo. Este sistema no solo mejora la calidad del aprendizaje, sino que también permite a los estudiantes progresar a su propio ritmo, manteniendo las buenas prácticas de programación.
+Un logro clave ha sido el desarrollo del Sistema de Tutorización Inteligente, que supera las barreras de algunos de los métodos tradicionales al ofrecer un aprendizaje personalizado y adaptativo. Este sistema no solo puede mejorar la calidad del aprendizaje, sino que también puede permitir a los estudiantes progresar a su propio ritmo.
 
-La colaboración con Codelearn S.L. ha sido instrumental, fusionando teoría y práctica para evaluar y mejorar el ITS, y así dar los primeros pasos hacia un sistema educativo más eficaz y atractivo.
+La colaboración con Codelearn S.L. ha sido instrumental, fusionando teoría y práctica para evaluar y mejorar el ITS, y así dar los primeros pasos hacia un sistema educativo más eficaz y atractivo para los jóvenes de hoy en día.
 
 \section{Trabajo Futuro}
 
-A pesar de los avances logrados, el camino por delante es largo. Futuras líneas de investigación y desarrollo incluyen:
+El proyecto, aunque completo, es el principio de un camino amplio. La colaboración con Codelearn S.L. no solo ha demostrado la viabilidad del proyecto, sino que también ha abierto puertas para su continuación y expansión. Los siguientes pasos están alineados con la visión y estrategia a largo plazo de la empresa, asegurando que el trabajo realizado tenga un impacto duradero y evolutivo.
 
 \begin{itemize}
-    \item \textbf{Variedad de Recursos Didácticos}: Una mayor diversidad en el tipo de ejercicios y evaluaciones, cómo relleno de código o cuestionarios sobre ciertos temas, entre otros ejemplos.
-    \item \textbf{Automatización  de la Corrección}: Conseguir automatizar la corrección para los ejercicios HTML y que no se recurra al profesor. 
+    \item \textbf{Variedad de Recursos Didácticos}: Una mayor diversidad en el tipo de ejercicios y evaluaciones, cómo relleno de huecos de un código o cuestionarios sobre ciertos temas, entre otros ejemplos.
+    \item \textbf{Automatización  de la Corrección}: Conseguir automatizar la corrección para los ejercicios HTML y que no se recurra a la figura del profesor para ello. 
     \item \textbf{Sistema de Chat-Bot}: Sistema conversacional para una primera resolución de dudas comunes en un ejercicio, como una explicación más extensa o ejemplos de ejecución.  
     \item \textbf{Inteligencia Artificial}: El uso de algoritmos de aprendizaje automático que optimizaría la adaptabilidad del sistema a las necesidades individuales del estudiante, debido a la gran cantidad de datos con la que entrenaría.
-    \item \textbf{Feedback en Tiempo Real}: La implementación de análisis del código mientras el estudiante lo este escribiendo con tal de poder hacer ajustes y/o comentarios inmediatos.
+    \item \textbf{Feedback en Tiempo Real}: La implementación de análisis del código mientras el estudiante lo este escribiendo con tal de poder hacer ajustes o los comentarios pertinentes.
     \item \textbf{Tests A/B}: Realización de pruebas para evaluar la eficacia de distintas técnicas pedagógicas y elementos de diseño.
   \end{itemize}
 
